refactor: resolve all 51 SonarQube Code Smells